style/styles.css
body {
  background-color: #ededed;
}

/* Google fonts */
.roboto-regular {
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.roboto-medium {
  font-family: "Roboto", sans-serif;
  font-weight: 500;
  font-style: normal;
}

.roboto-bold {
  font-family: "Roboto", sans-serif;
  font-weight: 700;
  font-style: normal;
}

/* Nav Bar */

.nav-size {
  border-radius: 12%;
  height: 80px;
  width: 110px;
  padding: 8px;
}

.nav-link {
  color: #353535;
  font-size: 24px;
  margin: 0 1.75rem;
}
.nav-link:hover {
  color: #b73a2a;
  text-decoration: underline;
}
.sale-decoration {
  color: #b73a2a;
}

/* Hero Image */

.hero-image {
  background-image: url(../assets/hero.jpg);
  width: 100%;
  height: 72rem;
  display: flex;
  justify-content: start;
  align-items: center;
  object-fit: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.hero-square {
  background-color: #000000;
  opacity: 82%;
  margin: 44rem 0 0 7.25rem;
  padding: 20px 40px;
  border-radius: 0;
}

.hero-text-color {
  color: #ffffff;
  opacity: 100%;
}
.hero-sale-background {
  background-color: #1e2c20;
}

.hero-sale-text {
  color: #ffffff;
  font-size: 24px;
  padding: 30px 0 5px;
}

/* Start Cooking */ /* Mike found a cool site for zoom-images so credit to him for the hookup */

.cooking-header {
  margin-top: 9rem;
  text-align: center;
}

.cooking-header h1 {
  font-family: "Roboto", sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 60px;
}

.cooking-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
  margin: 30px 5rem 0;
}

.cooking-center {
  margin: auto;
}

.cooking-img {
  width: 379px;
  height: 402px;
  object-fit: cover;
  border-radius: 10px;
}

.cooking-grid h2 {
  font-family: "Roboto", sans-serif;
  font-weight: bold;
  font-style: normal;
  margin-top: 20px;
}

.img-hover-zoom {
  border-radius: 5%;
  overflow: hidden;
}
.img-hover-zoom img {
  transition: transform 0.15s ease;
}
.img-hover-zoom:hover img {
  transform: scale(1.2);
}

/* New Arrivals */

.arrivals-header {
  margin-top: 9rem;
  text-align: center;
}

.arrivals-header h1 {
  font-family: "Roboto", sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 60px;
}

.arrivals-container-image {
  height: 632px;
  width: 805px;
  background-color: #000000;
}

.arrivals-container-image:hover img {
  opacity: 0.7;
}

.arrivals-image {
  height: 100%;
  width: 100%;
}

/* Credit to Mike for helping */

.dot {
  height: 25px;
  width: 25px;
  border-radius: 50%;
  border: 3px solid #ededed;
  display: inline-block;
}
.dot-1 {
  background-color: #ea2d2c;
  outline: none;
  box-shadow: 0 0 1pt 2pt black;
}

.dot-2 {
  background-color: #fb5108;
}

.dot-3 {
  background-color: #d29d12;
}

.dot-4 {
  background-color: #353535;
}

/* End credit*/

.arr-text {
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 18px;
}

.titles-arr {
  font-family: "Roboto", sans-serif;
  font-weight: 600;
  font-style: normal;
  font-size: 36px;
  margin-top: 30px;
}

.arrivals-card-margin {
  margin-left: 0px;
}

.arrivals-card-margin2 {
  margin-right: 30px;
}

.arrivals-center {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

/* Best Sellers */

.card-dimension {
  height: 757px;
  width: 497px;
}

.card-dimension2 {
  height: 625px;
  width: 497px;
}
.best-header {
  margin-top: 9rem;
  text-align: center;
}

.best-header h1 {
  font-family: "Roboto", sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 60px;
}

.titles {
  font-family: "Roboto", sans-serif;
  font-weight: 600;
  font-style: normal;
  font-size: 36px;
}

.best-text {
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 18px;
  line-height: 22px;
  height: 220px;
  width: 449px;
}

.best-text2 {
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 18px;
  line-height: 22px;
  height: 88px;
  width: 449px;
}

.best-btn {
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 16px;
  padding: 7px 33px 7px;
}

.best-btn:hover {
  background-color: #1e2c20;
  color: #ffffff;
}
.best-images-card {
  height: 338px;
  width: 449px;
}

.best-images {
  height: 338px;
  width: 449px;
  border-radius: 10px;
}

.card-borders {
  border: 1px solid black;
  border-radius: 10px;
}

.best-image-margin {
  margin-top: 15px;
  margin-left: 10px;
}

.best-card-margin {
  margin-left: 62.5px;
}

/* Review */

.reviews-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(550px, 1fr));
  margin: 30px 5rem 0;
}
.review-image {
  background-image: url(../assets/Reviews1.jpg);
  background-repeat: no-repeat;
  background-position: center;
  width: 531px;
  height: 664.75px;
  border-radius: 10px;
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
}

.review-image2 {
  background-image: url(../assets/Reviews2.jpg);
  background-repeat: no-repeat;
  background-position: center;
  width: 531px;
  height: 664.75px;
  border-radius: 10px;
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
}
.review-image3 {
  background-image: url(../assets/Reviews3.jpg);
  background-repeat: no-repeat;
  background-position: center;
  width: 531px;
  height: 664.75px;
  border-radius: 10px;
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
}

.review {
  background-color: #000000;
  color: #ffffff;
  opacity: 70%;
  text-align: center;
  padding: 55px;
  width: 75%;
  border-radius: 6px;
}

.review2 {
  background-color: #000000;
  color: #ffffff;
  opacity: 70%;
  text-align: center;
  padding: 43px 55px 43px;
  width: 75%;
  border-radius: 6px;
}

.review-text {
  text-align: start;
  color: solid #ffffff;
  font-weight: 800px;
}

/* Footer */

.main-footer {
  width: 100%;
  height: auto;
}
.footer-color {
  background-color: #1e2c20;
  padding-bottom: 25px;
  margin-top: 100px;
}

.footer-container {
  width: 415px;
  height: 115px;
  margin-left: 400px;
}

.footer-change {
  color: #ffffff;
}

.footer-change:hover {
  color: rgb(7, 110, 7);
}

.footer-text {
  color: #ffffff;
}

.no-curve {
  border-radius: 0px;
}

.border {
  border: 1px solid white;
}

.icons {
  margin-top: 20px;
}

.social-icons {
  padding: 0 27.5px 0 0;
}

@media screen and (max-width: 960px) {
  .cooking-grid {
    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
    margin: 30px 3rem 0;
  }

  .cooking-img {
    width: 290px;
    height: 270px;
  }

  .cooking-center {
    width: 290px;
    height: 350px;
  }
}

@media screen and (max-width: 850px) {
  .arrivals-container-image {
    height: 600px;
    width: 700px;
  }

  .main-container{
    margin-top: 75px;
  }
  .arrvals-card-margin {
    margin-left: 0px;
    margin-top: 100px;
  }

  .arrivals-card-margin2 {
    margin-right: 0px;
    margin-top: 75px;
  }

  .best-card-margin {
    margin-left: 0px;
  }
}

@media screen and (max-width: 768px) {
  .best-card-margin {
    margin-top: 30px;
    margin-left: 0px;
  }

  .cooking-grid {
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    margin: 30px 3rem 0;
  }

  .cooking-center {
    margin-top: 35px;
  }

  .review-image {
    margin-top: 35px;
    margin-left: 37px;
  }

  .review-image2 {
    margin-top: 35px;
    margin-left: 37px;
  }

  .review-image3 {
    margin-top: 35px;
    margin-left: 37px;
  }

  .footer-tablet {
    display: flex;
    justify-content: space-evenly;
  }

  .footer-change {
    margin-top: 15px;
  }

  .footer-container {
    margin-left: 100px;
    height: 170px;
  }
}

@media screen and (max-width: 535px) {
  .cooking-grid {
    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
    margin: 30px 0 0;
  }
  .cooking-img {
    width: 174px;
    height: 227px;
  }

  .cooking-center {
    width: 174px;
    height: 350px;
  }
  .arrivals-container-image {
    height: 429px;
    width: 398px;
  }
  .review-image {
    width: 411px;
    height: 564px;
    margin-top: 35px;
    margin-left: 0px;
  }

  .review-image2 {
    width: 411px;
    height: 564px;
    margin-top: 35px;
    margin-left: 0px;
  }

  .review-image3 {
    width: 411px;
    height: 564px;
    margin-top: 35px;
    margin-left: 0px;
  }
}

@media screen and (max-width: 425px) {
  .cooking-grid {
    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
  }
  .cooking-img {
    width: 174px;
    height: 227px;
  }

  .card-dimension {
    height: 680px;
    width: 398px;
  }

  .card-dimension2 {
    height: 640px;
    width: 398px;
  }

  .best-text {
  
    height: 200px;
    width: 380px;
    font-size: 17px;
  }

  .best-text2 {
    height: 160px;
    width: 380px;
    font-size: 17px;
  }

  .best-image-card {
    height: 310px;
    width: 395px;
  }

  .best-images {
    height: 310px;
    width: 370px;
    border-radius: 10px;
  }

  .best-image-margin {
    margin-top: 15px;
    margin-left: 0px;
  }

  .best-card-margin {
    margin-left: 0px;
  }

  .arrivals-center {
    width: 398px;
  }

  .arrivals-container-image {
    margin-left: 15px;
  }

  .titles-arr{
    margin-left: 15px;
  }

  .arr-text{
    margin-left: 15px;
  }

  .dots-move{
    margin-left: 15px;
  }

  .reviews-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
    margin: 30px 0rem 0;
  }
  .footer-container {
    margin-left: 0px;
    height: 170px;
  }

  .review-image{
    margin-left: 6px;
  }
  .review-image2{
    margin-left: 6px;
  }
  .review-image3{
    margin-left: 6px;
  }
}

